changed generate table to be hidden by default and show when items are available to display; fixed up some margins and widths;

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -15,6 +15,11 @@ tr:nth-child(odd) {
 td, th {
     padding: 5px 15px;
 }
+#item-list {
+    display: none;
+    width: 95%;
+    max-width: 700px;
+}
 .full-page-loading-spinner-container {
     height: 100%;
     width: 100%;
@@ -79,9 +84,12 @@ td, th {
 }
 .search-results-section {
     display: none;
+    margin: 10px;
     border: 2px solid black;
     margin: 5px;
     max-height: 300px;
+    width: 95%;
+    max-width: 600px;
     overflow-y: scroll;
 }
 .bordered-item {
